deploy: hugodrafts/vickers@1a22f50c3022ff2e786e77962c42b379fcadfe21

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <link rel="shortcut icon" type=image/ico href=./favicon.png>
 <link rel="shortcut icon" sizes=16x16 href=./favicon.png>
-<link rel=apple-touch-icon href=./favicon.png><link rel=stylesheet href=/css/style.min.507360fb289a0b8b12111ed6a362153edf41843578ec3ac2cc5892e518de8342.css><title>Vickers</title>
+<link rel=apple-touch-icon href=./favicon.png><link rel=stylesheet href=/css/style.min.507360fb289a0b8b12111ed6a362153edf41843578ec3ac2cc5892e518de8342.css><title>Vickers - климатические системы</title>
 </head><body data-scroll-animation=true data-spy=scroll data-target=#main-navbar>
 <div class=wrapper>
 <header id=region-header class=region>
